[project]
name = "netherite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arian-Ott", email = "arian.ott@ieee.org" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
netherite = "netherite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
